fixed cursor invisible issue after last changes

--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@ body {
   overflow-x: hidden;
 }
 
-* {
+.custom-cursor-active, .custom-cursor-active * {
   cursor: none !important;
 }
 
